--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<Title>Gematria Connection Calculator</Title>
+<Title>Gematria Sky Party Calculator</Title>
 
 <script src="lib/jquery.min.js"></script>
 <script src="lib/html2canvas.min.js"></script>
