--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 	</tr><tr>
 
-	<td><center><input id="SearchField" autofocus type="text" oninput="FieldChange(sVal())" style="width: 500px; min-width: 500px; font-size: 125%" onkeydown="navHistory(event.keyCode) "ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></input>
-	<right><input id="Highlight" type="text" style="width: 200px; min-width: 200px; font-size: 125%"></input><span id="clearFilterButton"></span></right>
+	<td><center><input id="SearchField" autofocus type="text" enterkeyhint="done" oninput="FieldChange(sVal())" style="width: 500px; min-width: 500px; font-size: 125%" onkeydown="navHistory(event.keyCode) "ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></input>
+	<right><input id="Highlight" type="text" enterkeyhint="done" style="width: 200px; min-width: 200px; font-size: 125%"></input><span id="clearFilterButton"></span></right>
 
 	</center><P>
 
